[gd_scene load_steps=16 format=3 uid="uid://c1u0stsajqdxw"]

[ext_resource type="Script" path="res://scenes/weapons/Bomb.gd" id="1_uhd1w"]
[ext_resource type="Script" path="res://scenes/weapons/Timer.gd" id="2_vm0bx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8an4x"]
albedo_color = Color(0.807843, 0.364706, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qlu0a"]
radius = 3.0
height = 7.0

[sub_resource type="SphereShape3D" id="SphereShape3D_oslt2"]
radius = 3.5

[sub_resource type="SphereShape3D" id="SphereShape3D_kwl7x"]
radius = 100.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w18b2"]
transparency = 1
albedo_color = Color(0, 0.921569, 0.886275, 0.0901961)

[sub_resource type="SphereMesh" id="SphereMesh_ohmwn"]
radius = 100.0
height = 200.0

[sub_resource type="SphereShape3D" id="SphereShape3D_s6g6q"]
radius = 125.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mdagn"]
transparency = 1
albedo_color = Color(1, 0.666667, 1, 0)

[sub_resource type="SphereMesh" id="SphereMesh_nr5we"]
radius = 125.0
height = 250.0

[sub_resource type="SphereShape3D" id="SphereShape3D_5y3n3"]
radius = 20.0

[sub_resource type="Animation" id="Animation_lajsf"]
resource_name = "FlashBeforeExplode"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerClosenessDetector/MeshInstance3D:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.55, 0.7, 0.85, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.666667, 1, 0.0901961), Color(1, 0.211765, 0.541176, 0.529412), Color(1, 0.666667, 1, 0.0901961), Color(1, 0.211765, 0.541176, 0.529412), Color(1, 0.666667, 1, 0.0901961), Color(1, 0.211765, 0.541176, 0.529412), Color(1, 0.666667, 1, 0.0901961), Color(1, 0.211765, 0.541176, 0.529412)]
}

[sub_resource type="Animation" id="Animation_brux5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerClosenessDetector/MeshInstance3D:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.666667, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jugd"]
_data = {
"FlashBeforeExplode": SubResource("Animation_lajsf"),
"RESET": SubResource("Animation_brux5")
}

[node name="RigidBody3D" type="RigidBody3D"]
collision_layer = 8
collision_mask = 3
mass = 10.0
gravity_scale = 0.1
continuous_cd = true
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("1_uhd1w")
explosion_color = Color(1, 0.501961, 0, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_8an4x")
mesh = SubResource("SphereMesh_qlu0a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_oslt2")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.136635, 0.4524)
shape = SubResource("SphereShape3D_kwl7x")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Area3D"]
visible = false
material_override = SubResource("StandardMaterial3D_w18b2")
mesh = SubResource("SphereMesh_ohmwn")
skeleton = NodePath("../../PlayerClosenessDetector")

[node name="PlayerClosenessDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerClosenessDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.136635, 0.4524)
shape = SubResource("SphereShape3D_s6g6q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerClosenessDetector"]
material_override = SubResource("StandardMaterial3D_mdagn")
mesh = SubResource("SphereMesh_nr5we")

[node name="MissleMask" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MissleMask"]
shape = SubResource("SphereShape3D_5y3n3")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
script = ExtResource("2_vm0bx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4jugd")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="PlayerClosenessDetector" to="." method="_on_player_closeness_detector_body_entered"]
[connection signal="body_entered" from="MissleMask" to="." method="_on_missle_mask_body_entered"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_timeout"]
